--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
                     <div class="leftItems" id="3">
                         <img src="src/assets/proj3.png" alt="">
-                        <p style="font-weight: 300;">MOBILE: RECIPE SHARING COMM.</p>
+                        <p style="font-weight: 300;">RECIPE SHARING COMM.</p>
                     </div>
                     <div class="leftItems" id="4">
                         <img src="src/assets/proj4.png" alt="">
