added project select label

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
         </div>
         <div class="projects" id="projectsId">
             <h2>NOTABLE PROJECTS</h2>
+            
+            <h3 id="h3Projs" style="font-weight: 200; margin-top: 3%;">Select a Project:</h3>
             <div class="projCont">
                 <div class="left">
                     <div class="leftItems" id="1">
@@ -269,9 +271,9 @@
             </div>
 
             <div class="concon">
-                <div class="contactItems" data-copy="+63 9603 6352 63">
+                <div class="contactItems" data-copy="+63 960 363 5263">
                     <i class="fa-solid fa-phone" style="color: black;"></i>
-                    <p>+63 9603 6352 63</p>
+                    <p>+63 960 363 5263</p>
                     <i class="fa-solid fa-copy copyIcon" title="Copy number"></i>
                 </div>
                 <div class="contactItems" data-copy="c.signo0612@gmail.com">
