--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="introS1">
                     <h3>OTHER INFO</h3>
                     <p><i class="fa-solid fa-user"></i> 21 YEARS OF AGE</p>
-                    <p><i class="fa-brands fa-google-scholar"></i> STUDENT, JUNIOR YEAR</p>
+                    <p><i class="fa-brands fa-google-scholar"></i> STUDENT, SENIOR YEAR</p>
                     <p id="email">
                         <i class="fa-solid fa-envelope"></i> 
                         <span id="emailText">c.signo0612@gmail.com</span>
